package open.vice.cheers.core.utils

class TagConstants {
    companion object {
        const val PUNK_BEER_LIST = "PUNK_BEER_LIST"
        const val OK_ALERT_DIALOG = "OK_ALERT_DIALOG"
        const val DROPDOWN_MENU_MONTH = "DROPDOWN_MENU_MONTH"
        const val DROPDOWN_MENU_YEAR = "DROPDOWN_MENU_YEAR"
        const val SEARCH_FILTER_EXPANDABLE = "SEARCH_FILTER_EXPANDABLE"
        const val DATE_FILTER_EXPANDABLE = "DATE_FILTER_EXPANDABLE"
        const val START_DATE_FILTER_TEXT_FIELD = "START_DATE_FILTER_TEXT_FIELD"
        const val END_DATE_FILTER_TEXT_FIELD = "END_DATE_FILTER_TEXT_FIELD"
        const val BUTTON_DATE_FILTER = "BUTTON_DATE_FILTER"
        const val SEARCH_FILTER_TEXT_FIELD = "SEARCH_FILTER_TEXT_FIELD"
    }
}